--- a/ConsoleApplication8/ConsoleApplication8.vcxproj
+++ b/ConsoleApplication8/ConsoleApplication8.vcxproj
@@ -41,8 +41,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Program Files\PostgreSQL\9.4\include;C:\Program Files\PostgreSQL\9.4\include\libpq;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Program Files\PostgreSQL\9.4\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Program Files %28x86%29\PostgreSQL\9.4\include;C:\Program Files %28x86%29\PostgreSQL\9.4\include\libpq;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files %28x86%29\PostgreSQL\9.4\include;C:\Program Files %28x86%29\PostgreSQL\9.4\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -60,7 +60,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Program Files\PostgreSQL\9.4\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Program Files %28x86%29\PostgreSQL\9.4\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>libpq.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
